# pthash

./: .gitmodules  CMakeLists.txt
include/builders/: internal_memory_builder_single_phf.hpp  search.hpp
include/encoders/: util.hpp
include/utils/: hasher.hpp
scoped-include/pthash/: builders  encoders  partitioned_phf.hpp  pthash.hpp  single_phf.hpp  utils
